# pq

./: .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  LICENSE  Makefile  README.md  RELEASE.md  alembic.ini  conductor.json  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  release.yml
api/: index.html
architecture/: index.html
comparison/: index.html
database/: index.html
docs/: api.md  architecture.md  comparison.md  database.md  examples.md  index.md
examples/: __init__.py  async_tasks.py  basic.py  error_handling.py  full.py  index.html  periodic.py  priority.py  tasks.py
migrations/: env.py
migrations/versions/: 2026-01-01_18-18-33_bcc7618d02da_initial_schema.py  2026-01-01_19-59-15_9ba3135d737c_add_task_status_and_cron_support.py  20260101_181833_bcc7618d02da_initial_schema.py  20260109T065839Z_476683af098d_initial_schema.py  8eebdede7cb4_initial_schema.py
scripts/: bump
search/: search_index.json
src/pq/: __init__.py  client.py  config.py  logging.py  models.py  priority.py  registry.py  worker.py
src/pq/migrations/versions/: 20260205T120000Z_a1b2c3d4e5f6_add_max_concurrent.py  20260205T180000Z_b7c8d9e0f1a2_add_periodic_key.py  20260217T120000Z_c3d4e5f6a7b8_add_periodic_active.py
tests/: conftest.py  test_client.py  test_integration.py  test_registry.py  test_worker.py
