[project]
name = "pq"
version = "0.1.0"
description = "Postgres-backed job queue for Python"
readme = "README.md"
authors = [
    { name = "ricwo", email = "r@cogram.com" }
]
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "click>=8.0.0",
    "croniter>=2.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.45",
]

[project.scripts]
pq = "pq.cli:main"

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "ty>=0.0.8",
]
